--- a/server.properties
+++ b/server.properties
@@ -1,37 +1,39 @@
 #Minecraft server properties
-#Tue Jul 07 22:08:58 CST 2015
-generator-settings=
-op-permission-level=4
-allow-nether=true
-resource-pack-hash=
-level-name=world
-enable-query=false
-allow-flight=false
-announce-player-achievements=true
-server-port=25565
-max-world-size=29999984
-level-type=DEFAULT
-enable-rcon=false
-level-seed=
-force-gamemode=false
-server-ip=
-network-compression-threshold=256
-max-build-height=256
-spawn-npcs=true
-white-list=false
-spawn-animals=true
-hardcore=false
-snooper-enabled=true
-online-mode=true
-resource-pack=
-pvp=true
-difficulty=1
-enable-command-block=false
-gamemode=0
-player-idle-timeout=0
-max-players=20
+#Tue Jul 14 17:56:15 CDT 2015
+spawn-protection=16
 max-tick-time=60000
+generator-settings=
+force-gamemode=false
+allow-nether=true
+gamemode=0
+broadcast-console-to-ops=true
+enable-query=false
+player-idle-timeout=0
+difficulty=1
 spawn-monsters=true
-generate-structures=true
+op-permission-level=4
+resource-pack-hash=
+announce-player-achievements=true
+pvp=true
+snooper-enabled=true
+level-type=DEFAULT
+hardcore=false
+enable-command-block=false
+max-players=20
+network-compression-threshold=256
+max-world-size=29999984
+server-port=25565
+server-ip=
+spawn-npcs=true
+allow-flight=false
+level-name=world
 view-distance=10
+resource-pack=
+spawn-animals=true
+white-list=false
+generate-structures=true
+online-mode=true
+max-build-height=256
+level-seed=
 motd=A Minecraft Server
+enable-rcon=false
